# nr-backend

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  backub.pre-commit-config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
accounts/: filters.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customer_address.py
core/: settings.py  urls.py
labels/: models.py  serializers.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_labeltemplate_is_default.py  0003_labeltemplate_is_billing_and_more.py  0004_labeltemplate_is_billing_default.py
labels/templatetags/: label_tags.py
labels/utils/: barcode_generator.py
requirements/: models.py  serializers.py  urls.py  views.py
requirements/migrations/: 0001_initial.py  0002_remove_requirement_bill_image_and_more.py
static/: index.html
store/: api_views.py  factories.py  filters.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product_discount_type_product_value.py  0003_product_is_printed_alter_product_discount_type.py  0004_alter_discount_customers.py  0005_rename_price_at_purchase_invoiceitem_discount_at_purchase_and_more.py  0006_product_color_product_size.py  0007_invoiceitem_product.py  0008_invoice_payment_type.py  0009_alter_invoice_payment_type.py  0010_alter_product_image.py  0011_brand.py  0012_brand_is_default.py  0013_alter_product_brand.py
store/templatetags/: form_tags.py
store/utils/: barcode_generator.py
store/views/: customer.py  discount.py  labels.py  product.py  sales.py
templates/: index.html
templates/accounts/: login.html
templates/label/: edit.html  list.html  print_labels.html  print_labels_new.html  view_product.html
tests/: conftest.py
(+21 files in other folders)
