[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Faruk Hossain",email = "hossainf114@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-mptt (>=0.17.0,<0.18.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "python-barcode (>=0.15.1,<0.16.0)",
    "django-extensions (>=4.1,<5.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.black]
line-length = 88
target-version = ["py311"]  # adjust this to your Python version

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
ignore = ["W503"]
max-line-length = 88
